web/book/tests/documentation/snapshots/documentation__book__reference__syntax__f-strings__2.snap
---
source: web/book/tests/documentation/book.rs
expression: "from tracks\nselect length_str = f\"{length_seconds / 60} minutes\"\n"
---
Error:
   ╭─[ :2:38 ]
   │
 2 │ select length_str = f"{length_seconds / 60} minutes"
   │                                      ┬
   │                                      ╰── expected something else, '.', ':', or '}', but found " "
───╯
